<resources>
    <!-- formats -->
    <string name="rawDigit_format" translatable="false">%1$d</string>
    <string name="rawString_format" translatable="false">%1$s</string>

    <string name="player_name_format" translatable="false">@string/rawString_format</string>
    <string name="winnerPoints_format" translatable="false">@string/rawDigit_format</string>
    <string name="turnnumber_format" translatable="false">@string/rawDigit_format</string>

    <string name="player_club_format" translatable="false">@string/rawString_format</string>
    <string name="player_score_format" translatable="false">@string/rawDigit_format</string>
    <string name="remainingBalls_format" translatable="false">@string/rawDigit_format</string>
    <string name="ballsOnTable_format">%1$d\non the table</string>
    <string name="switchReason_format" translatable="false">@string/rawString_format</string>


    <!-- mainactivity strings -->
    <string name="safe_string">Safe</string>
    <string name="foul_string">Foul</string>
    <string name="miss_string">Miss</string>
    <string name="undo_string">\u21B6</string>
    <string name="redo_string">\u21B7</string>

    <string name="player_name_hint">Player</string>
    <string name="player_club_hint">Club</string>
    <string name="newBallNumber_hint">Touch for remaining balls</string>
    <string name="winnerPoints_hint">Goal</string>

    <string name="app_name" translatable="false">PocketTRacker</string>


    <!-- scoresheet strings -->
    <string name="turnnumber_columnlabel">Inning</string>
    <string name="turnnumber_subcolumnlabel" translatable="false">#</string>
    <string name="ballsOnTable_columnlabel">Table</string>
    <string name="ballsOnTable_subcolumnlabel" translatable="false">\u2B24</string>
    <string name="switchReason_columnlabel" translatable="false">\u25A0</string>

    <string name="player1_default">Player1</string>
    <string name="player2_default">Player2</string>
    <string name="player1Increment_columnlabel" translatable="false">+</string>
    <string name="player1Total_columnlabel" translatable="false">\u03A3</string>
    <string name="player2Increment_columnlabel" translatable="false">+</string>
    <string name="player2Total_columnlabel" translatable="false">\u03A3</string>

    <string name="scoresheet_scrollview_description">Scoresheet for the straight pool game</string>

    <string name="player_maxrun_format">Best run: %1$d</string>
    <string name="player_innings_format">Innings: %1$d</string>
    <string name="meanInning_format">\u2300 inning: %1$.2f</string>
    <string name="meanRun_format">\u2300 run: %1$.2f</string>

    <!-- numberpane strings -->
    <string name="button_1_label">1\nrerack</string>
    <string name="button_2_label" translatable="false">2</string>
    <string name="button_3_label" translatable="false">3</string>
    <string name="button_4_label" translatable="false">4</string>
    <string name="button_5_label" translatable="false">5</string>
    <string name="button_6_label" translatable="false">6</string>
    <string name="button_7_label" translatable="false">7</string>
    <string name="button_8_label" translatable="false">8</string>
    <string name="button_9_label" translatable="false">9</string>
    <string name="button_10_label" translatable="false">10</string>
    <string name="button_11_label" translatable="false">11</string>
    <string name="button_12_label" translatable="false">12</string>
    <string name="button_13_label" translatable="false">13</string>
    <string name="button_14_label" translatable="false">14</string>
    <string name="button_15_label" translatable="false">15</string>

    <!-- playerFragment strings -->
    <string name="left_arrow_string" translatable="false">\u2190</string>
    <string name="right_arrow_string" translatable="false">\u2192</string>
    <string name="left_swap_string" translatable="false">\u21C6</string>
    <string name="right_swap_string" translatable="false">\u21C4</string>

    <!-- toolbar strings -->
    <string name="counter_string">Counter</string>
    <string name="scoresheet_string">Scoresheet</string>

    <!-- dropdown menu strings -->
    <string name="newGame_string">New Game</string>
    <string name="saveGame_string">Save</string>
    <string name="loadGame_string">Load</string>
    <string name="openSettings_string">Settings</string>

    <!-- Preference Titles -->
    <string name="customization_header">Customization</string>
    <string name="defaults_header">Defaults</string>

    <!-- Defaults Preferences -->
    <string name="player1_name_default_title">Default name for player 1</string>
    <string name="player2_name_default_title">Default name for player 2</string>
    <string name="player1_club_default_title">Default club of player 1</string>
    <string name="player2_club_default_title">Default club of player 2</string>
    <string name="winnerPoints_default_title">Default points to win</string>

    <!-- Customization Preferences -->
    <string name="club_toggle_summary_off">Players have no clubs</string>
    <string name="club_toggle_summary_on">Players have clubs</string>
    <string name="club_toggle_title">Clubs on/off</string>

    <!-- about page -->
    <string name="about_string">About</string>
    <string name="versionCode_format">Version code %1$d</string>
    <string name="versionName_format">Version name %1$s</string>
    <string name="author_format">By %1$s</string>
    <string name="thankyou_string">"Thank you for using my app!\nPlease report bugs, request features and, if you like, leave a star in the Gitlab repo: "</string>
    <string name="gitlab_format" translatable="false">@string/rawString_format</string>
    <string name="AODon_string">AOD for mainpage enabled</string>
    <string name="AODoff_string">AOD for mainpage disabled</string>
    <string name="AOD_toggle_title">AOD on/off</string>
    <string name="theme_summary">Select your preferred theme</string>

    <string name="scoresPlot_description">Inning</string>
    <string name="scoresPlotLabel">Score</string>
    <string name="theme_setting_title">Theme</string>
    <string name="runsPlot_description">Run</string>
    <string name="runsPlotLabel">Frequency</string>
    <string name="player_safes_format">Safes: %1$d</string>
    <string name="player_misses_format">Misses: %1$d</string>
    <string name="player_fouls_format">Fouls: %1$d</string>
    <string name="player_error_format">Error Ratio: %1$d %%</string>
    <string name="title_activity_settings">Settings</string>
    <string name="confirmNewGame">Are you sure?</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="max_innings_title">Maximum innings per game</string>
    <string name="game_settings_header">Game settings</string>
    <string name="innings_warning"> innings left!</string>
    <string name="innings_end">Maximum innings reached!</string>
    <string name="first_innings_warning_title">First warning before the last inning</string>
    <string name="second_innings_warning_title">Second warning before the last inning</string>

</resources>