<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/defaults_header">

        <EditTextPreference
            app:key="player1_name_default"
            app:title="@string/player1_name_default_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="player2_name_default"
            app:title="@string/player2_name_default_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="player1_club_default"
            app:title="@string/player1_club_default_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="player2_club_default"
            app:title="@string/player2_club_default_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:id="@+id/winnerPointsDefault_input"
            app:key="winnerPoints_default"
            app:title="@string/winnerPoints_default_title"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"/>


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/game_settings_header">

        <EditTextPreference
            android:id="@+id/max_innings_input"
            app:key="max_innings"
            app:title="@string/max_innings_title"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"/>

        <EditTextPreference
            android:id="@+id/first_innings_warning"
            app:key="first_innings_warning"
            app:title="@string/first_innings_warning_title"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"/>

        <EditTextPreference
            android:id="@+id/second_innings_warning"
            app:key="second_innings_warning"
            app:title="@string/second_innings_warning_title"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/customization_header">

        <SwitchPreferenceCompat
            app:key="club_toggle"
            app:defaultValue="true"
            app:summaryOff="@string/club_toggle_summary_off"
            app:summaryOn="@string/club_toggle_summary_on"
            app:title="@string/club_toggle_title" />

        <SwitchPreferenceCompat
            app:key="AOD_toggle"
            app:defaultValue="true"
            app:summaryOff="@string/AODoff_string"
            app:summaryOn="@string/AODon_string"
            app:title="@string/AOD_toggle_title" />

        <ListPreference
            app:key="theme"
            app:title="@string/theme_setting_title"
            app:summary="@string/theme_summary"
            app:defaultValue="system"
            app:entries="@array/theme_options"
            app:entryValues="@array/theme_values" />

    </PreferenceCategory>

</PreferenceScreen>