<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/scoresheet_table"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toTopOf="@id/loadGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/turn_column_weight"
                android:background="@drawable/cell_separator"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/turnnumber_columnlabel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player1table_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/player1_column_weight"
                android:background="@drawable/cell_separator"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/player1_default"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player2table_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/player2_column_weight"
                android:background="@drawable/cell_separator"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/player2_default"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/ballsOnTable_column_weight"
                android:background="@drawable/cell_separator"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/ballsOnTable_columnlabel"
                android:textStyle="bold" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/turnnumber_column_weight"
                android:background="@drawable/cell_separator"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/turnnumber_subcolumnlabel"
                android:textSize="@dimen/tableHeaderTextSize"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/switchReason_column_weight"
                android:background="@drawable/cell_separator"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/switchReason_columnlabel"
                android:textSize="@dimen/tableHeaderTextSize"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/player1Increment_column_weight"
                android:background="@drawable/cell_separator"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/player1Increment_columnlabel"
                android:textSize="@dimen/tableHeaderTextSize"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/player1Total_column_weight"
                android:background="@drawable/cell_separator"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/player1Total_columnlabel"
                android:textSize="@dimen/tableHeaderTextSize"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/player2Increment_column_weight"
                android:background="@drawable/cell_separator"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/player2Increment_columnlabel"
                android:textSize="@dimen/tableHeaderTextSize"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/player2Total_column_weight"
                android:background="@drawable/cell_separator"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/player2Total_columnlabel"
                android:textSize="@dimen/tableHeaderTextSize"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/ballsOnTable_subcolumn_weight"
                android:background="@drawable/cell_separator"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/ballsOnTable_subcolumnlabel"
                android:textSize="@dimen/tableHeaderTextSize"
                android:textStyle="bold" />

        </TableRow>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/scoresheet_scrollview_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableLayout
                android:id="@+id/score_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </TableLayout>

        </ScrollView>

    </TableLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loadGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loadGame_string"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/scoresheet_table"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveGame"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/saveGame_string"
        app:layout_constraintTop_toTopOf="@+id/loadGame"
        app:layout_constraintBottom_toBottomOf="@+id/loadGame"
        app:layout_constraintStart_toEndOf="@+id/loadGame"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
