<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/numberGrid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:minHeight="500dp"
    android:orientation="vertical"
    android:columnCount="3"
    android:rowCount="5" >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:backgroundTint="@color/button_15_color"
        android:text="@string/button_15_label"
        android:textSize="@dimen/numberPane_textsize"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_14_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_14_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_13_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_13_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_12_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_12_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_11_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_11_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_10_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_10_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_9_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_9_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_8_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_8_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_7_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_7_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_6_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_6_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_5_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_5_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_4_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_4_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_3_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_3_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_2_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_2_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_rowSpan="1"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button_1_label"
        android:textSize="@dimen/numberPane_textsize"
        android:backgroundTint="@color/button_1_color"
        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp" />

</GridLayout>